--- a/config.json
+++ b/config.json
@@ -1,99 +1,119 @@
 {
+  "policy": null,
   "log": {
-    "loglevel": "none"
+    "access": "",
+    "error": "",
+    "loglevel": "warning"
   },
   "inbounds": [
-  {
-  "port": 1080,
-  "listen": "127.0.0.1",
-  "protocol": "socks",
-  "sniffing": {
-    "enabled": true,
-    "destOverride": [
-      "http",
-      "tls"
-    ]
-  },
-  "settings": {
-    "auth": "noauth",
-    "udp": true,
-    "ip": null,
-    "clients": null
-  },
-  "streamSettings": null
-}
+    {
+      "tag": "proxy",
+      "port": 2046,
+      "listen": "127.0.0.1",
+      "protocol": "socks",
+      "sniffing": {
+        "enabled": true,
+        "destOverride": [
+          "http",
+          "tls"
+        ]
+      },
+      "settings": {
+        "auth": "noauth",
+        "udp": true,
+        "ip": null,
+        "address": null,
+        "clients": null
+      },
+      "streamSettings": null
+    }
   ],
   "outbounds": [
     {
+      "tag": "proxy",
       "protocol": "vmess",
       "settings": {
         "vnext": [
           {
-            "address": "45.82.255.40",
-            "port": 10086,
+            "address": "hk.wm0109.club",
+            "port": 2046,
             "users": [
               {
-                "id": "71cafe89-3cc5-4f6f-a4b2-aa792f46b151",
-                "alterId": 64,
-                "security": "auto",
-                "level": 1
+                "id": "5f83cf94-b33c-4989-b50d-c06c84baa00a",
+                "alterId": 2,
+                "email": "t@t.tt",
+                "security": "auto"
               }
             ]
           }
-        ]
+        ],
+        "servers": null,
+        "response": null
       },
       "streamSettings": {
-        "network": "tcp",
-        "security": "none",
+        "network": "ws",
+        "security": "tls",
         "tlsSettings": {
-          "serverName": "",
-          "allowInsecure": false
+          "allowInsecure": true,
+          "serverName": "hk.wm0109.club"
         },
-        "tcpSettings": {
-          "header": {
-            "type": "none",
-            "request": {}
+        "tcpSettings": null,
+        "kcpSettings": null,
+        "wsSettings": {
+          "connectionReuse": true,
+          "path": "/e978827a/",
+          "headers": {
+            "Host": "hk.wm0109.club"
           }
-        }
+        },
+        "httpSettings": null,
+        "quicSettings": null
       },
       "mux": {
-        "enabled": false,
+        "enabled": true,
         "concurrency": 8
-      },
-      "tag": "proxy"
+      }
     },
     {
+      "tag": "direct",
       "protocol": "freedom",
-      "settings": {},
-      "tag": "direct"
+      "settings": {
+        "vnext": null,
+        "servers": null,
+        "response": null
+      },
+      "streamSettings": null,
+      "mux": null
     },
     {
+      "tag": "block",
       "protocol": "blackhole",
-      "settings": {},
-      "tag": "block"
+      "settings": {
+        "vnext": null,
+        "servers": null,
+        "response": {
+          "type": "http"
+        }
+      },
+      "streamSettings": null,
+      "mux": null
     }
   ],
-  "policy": {
-    "levels": {
-      "1": {
-        "handshake": 6,
-        "connIdle": 300,
-        "uplinkOnly": 2,
-        "downlinkOnly": 5,
-        "bufferSize": 2
-      }
-    }
-  },
+  "stats": null,
+  "api": null,
+  "dns": null,
   "routing": {
     "domainStrategy": "IPIfNonMatch",
     "rules": [
       {
         "type": "field",
-        "ip": [
-          "geoip:private",
-          "geoip:cn"
+        "port": null,
+        "inboundTag": [
+          "api"
         ],
-        "outboundTag": "direct"
+        "outboundTag": "api",
+        "ip": null,
+        "domain": null
       }
     ]
   }
